--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for POE-Component-IRC-Plugin-Validator-CSS
 
-0.01    Date/time
+0.02    Tue Feb 12 2008
+        fixed the return of the plugin (PCI_EAT_*)
+        and documented the 'eat' argument to constructor
+
+0.01    Sun Feb 10 2008
         First version, released on an unsuspecting world.
 
